@@ -12,7 +12,6 @@ import com.google.auto.service.AutoService;
 import com.mongodb.client.ClientSession;
 import com.mongodb.client.MongoClient;
 import com.mongodb.client.MongoCollection;
-import com.mongodb.client.model.Aggregates;
 import com.mongodb.client.model.FindOneAndUpdateOptions;
 import com.mongodb.client.model.ReturnDocument;
 import dev.failsafe.TimeoutExceededException;
@@ -20,13 +19,14 @@ import org.bson.Document;
 import org.bson.conversions.Bson;
 
 import java.time.Duration;
-import java.util.Arrays;
 import java.util.List;
 import java.util.function.Function;
 
 import static atoma.storage.mongo.command.AtomaCollectionNamespace.BARRIER_NAMESPACE;
 import static atoma.storage.mongo.command.MongoErrorCode.WRITE_CONFLICT;
+import static com.mongodb.client.model.Aggregates.replaceRoot;
 import static com.mongodb.client.model.Filters.eq;
+import static java.util.Collections.emptyList;
 
 /**
  * Handles the {@code await} operation for a distributed {@code CyclicBarrier}.
@@ -66,8 +66,6 @@ import static com.mongodb.client.model.Filters.eq;
  *
  * <h3>MongoDB Document Schema</h3>
  *
- * <h3>MongoDB Document Schema</h3>
- *
  * <pre>{@code
  * {
  *   "_id": "barrier-resource-id",
@@ -80,6 +78,24 @@ import static com.mongodb.client.model.Filters.eq;
  *   "_waited": false,
  * }
  * }</pre>
+ *
+ * <h3>MongoDB Document Schema</h3>
+ *
+ * <pre>{@code
+ * {
+ *   "_id": "barrier-resource-id",
+ *   "parties": 5,
+ *   "generation": 1,
+ *   "is_broken": false,
+ *   "version": 12,
+ *   "waiters": {
+ *     "participants": [
+ *       { "participant": "lease-abc/thread-1", "lease": "lease-abc" },
+ *       { "participant": "lease-xyz/thread-8", "lease": "lease-xyz" }
+ *     ]
+ *   }
+ * }
+ * }</pre>
  */
 @SuppressWarnings("rawtypes")
 @AutoService({CommandHandler.class})
@@ -87,123 +103,160 @@ import static com.mongodb.client.model.Filters.eq;
 public class AwaitCommandHandler
     extends MongoCommandHandler<CyclicBarrierCommand.Await, CyclicBarrierCommand.AwaitResult> {
 
+  /**
+   *
+   *
+   * <h3>Fake-code for await logical</h3>
+   *
+   * <pre>{@code
+   * if ( barrier exists ) : {
+   *    if ( <input parties> != parties )  {
+   *                 $$ROOT
+   *                 _inconsistent_parties = true
+   *                 _passed = false
+   *                 return
+   *    }else{
+   *         if ( is_broken ) {
+   *             $$ROOT
+   *             return
+   *         }else{
+   *             if ( generation == <input generation> ) {
+   *                 if ( participants.size() + 1 == parties ) {
+   *                     $$ROOT
+   *                     participants = []
+   *                     generation += 1
+   *                     _passed = true
+   *                     return
+   *                 }else{
+   *                    $$ROOT
+   *                    _passed = false
+   *                    participants = $contactArray(participants, [ { participant:"participantId", lease: "leaseId" } ])
+   *                    return
+   *                 }
+   *             }else {
+   *                 $$ROOT
+   *                  _passed = false
+   *             }
+   *         }
+   *
+   *    }
+   * }else{
+   *     $$ROOT
+   *     _inconsistent_parties = true
+   * }
+   * }</pre>
+   *
+   * @param command the command for await
+   * @return single replace-root pipeline state
+   */
   private List<Bson> buildAggregationPipeline(CyclicBarrierCommand.Await command) {
     return List.of(
-        Aggregates.replaceRoot(
+        replaceRoot(
             new Document(
                 "$cond",
-                Arrays.asList(
+                List.of(
+                    // if ( barrier exists )
+                    new Document("$ne", List.of(new Document("$type", "$parties"), "missing")),
 
-                    /* ---------- if ( barrier exists ) ---------- */
-                    new Document(
-                        "$ne", Arrays.asList(new Document("$type", "$parties"), "missing")),
-
-                    /* ================= TRUE ================= */
+                    // ===== barrier exists =====
                     new Document(
                         "$cond",
-                        Arrays.asList(
+                        List.of(
+                            // if ( input parties != parties )
+                            new Document("$ne", List.of(command.parties(), "$parties")),
 
-                            /* if ( input parties != parties ) */
-                            new Document("$ne", Arrays.asList("$parties", command.parties())),
-
-                            /* inconsistent parties */
+                            // inconsistent parties
                             new Document(
                                 "$mergeObjects",
-                                Arrays.asList(
+                                List.of(
                                     "$$ROOT",
                                     new Document("_inconsistent_parties", true)
-                                        .append("_passed", false)
-                                        .append("_waited", false))),
+                                        .append("_passed", false))),
 
-                            /* ========= parties match ========= */
+                            // else: parties equals
                             new Document(
                                 "$cond",
-                                Arrays.asList(
+                                List.of(
+                                    // if ( is_broken )
+                                    "$is_broken",
 
-                                    /* if ( is_broken ) */
-                                    new Document("$eq", Arrays.asList("$_is_broken", true)),
-
-                                    /* already broken */
+                                    // return $$ROOT + is_broken=true
                                     new Document(
                                         "$mergeObjects",
-                                        Arrays.asList(
-                                            "$$ROOT",
-                                            new Document("_is_broken", true)
-                                                .append("_waited", false))),
+                                        List.of("$$ROOT", new Document("is_broken", true))),
 
-                                    /* ===== not broken ===== */
+                                    // else: not broken
                                     new Document(
                                         "$cond",
-                                        Arrays.asList(
-
-                                            /* if ( generation == input generation ) */
+                                        List.of(
+                                            // if ( generation == 1 )
                                             new Document(
                                                 "$eq",
-                                                Arrays.asList("$generation", command.generation())),
+                                                List.of("$generation", command.generation())),
 
-                                            /* ===== generation match ===== */
+                                            // generation equals
                                             new Document(
                                                 "$cond",
-                                                Arrays.asList(
-
-                                                    /* if ( number_waiting + 1 == parties ) */
+                                                List.of(
+                                                    // if ( participants.size() + 1 == parties )
                                                     new Document(
                                                         "$eq",
-                                                        Arrays.asList(
+                                                        List.of(
                                                             new Document(
                                                                 "$add",
-                                                                Arrays.asList(
-                                                                    "$number_waiting", 1)),
+                                                                List.of(
+                                                                    new Document(
+                                                                        "$size", "$participants"),
+                                                                    1)),
                                                             "$parties")),
 
-                                                    /* ---- pass barrier ---- */
+                                                    // matched barrier
                                                     new Document(
                                                         "$mergeObjects",
-                                                        Arrays.asList(
+                                                        List.of(
                                                             "$$ROOT",
                                                             new Document(
+                                                                    "participants", emptyList())
+                                                                .append(
                                                                     "generation",
                                                                     new Document(
                                                                         "$add",
-                                                                        Arrays.asList(
-                                                                            "$generation", 1)))
-                                                                .append("number_waiting", 0)
-                                                                .append("_passed", true)
-                                                                .append("_waited", true))),
+                                                                        List.of("$generation", 1L)))
+                                                                .append("_passed", true))),
 
-                                                    /* ---- keep waiting ---- */
+                                                    // not matched barrier
                                                     new Document(
                                                         "$mergeObjects",
-                                                        Arrays.asList(
+                                                        List.of(
                                                             "$$ROOT",
-                                                            new Document(
-                                                                    "number_waiting",
-                                                                    new Document(
-                                                                        "$add",
-                                                                        Arrays.asList(
-                                                                            "$number_waiting", 1)))
-                                                                .append("_passed", false)
+                                                            new Document("_passed", false)
                                                                 .append(
-                                                                    "_inconsistent_parties", false)
-                                                                .append("_waited", true))))),
+                                                                    "participants",
+                                                                    new Document(
+                                                                        "$setUnion",
+                                                                        List.of(
+                                                                            "$participants",
+                                                                            List.of(
+                                                                                new Document(
+                                                                                        "participant",
+                                                                                        command
+                                                                                            .participantId())
+                                                                                    .append(
+                                                                                        "lease",
+                                                                                        command
+                                                                                            .leaseId()))))))))),
 
-                                            /* ===== generation mismatch ===== */
+                                            // generation not equals
                                             new Document(
                                                 "$mergeObjects",
-                                                Arrays.asList(
+                                                List.of(
                                                     "$$ROOT",
-                                                    new Document("_is_broken", false)
-                                                        .append("_passed", false)
-                                                        .append("_waited", false))))))))),
+                                                    new Document("_passed", false))))))))),
 
-                    /* ================= FALSE ================= */
-                    /* barrier not exists */
+                    // ===== barrier does not existed. =====
                     new Document(
                         "$mergeObjects",
-                        Arrays.asList(
-                            "$$ROOT",
-                            new Document("_inconsistent_parties", true)
-                                .append("_waited", false)))))));
+                        List.of("$$ROOT", new Document("_inconsistent_parties", true)))))));
   }
 
   @Override
@@ -222,8 +275,6 @@ public class AwaitCommandHandler
                   pipeline,
                   new FindOneAndUpdateOptions().upsert(true).returnDocument(ReturnDocument.AFTER));
 
-          System.err.println("Await command: " + barrierDoc);
-
           if (barrierDoc == null) {
             throw new AtomaStateException("Failed to find or create barrier document.");
           }
@@ -234,11 +285,20 @@ public class AwaitCommandHandler
                     "Failed to waiting on document. Parties was %d. expected %d",
                     barrierDoc.getInteger("parties"), command.parties()));
           }
+          List<Document> participants = barrierDoc.getList("participants", Document.class);
+          var waited =
+              participants.stream()
+                      .anyMatch(
+                          t ->
+                              t.getString("participant").equals(command.participantId())
+                                  && t.getString("lease").equals(command.leaseId()))
+                  && barrierDoc.getLong("generation") == command.generation()
+                  && !barrierDoc.getBoolean("_passed", false);
 
           return new CyclicBarrierCommand.AwaitResult(
               barrierDoc.getBoolean("_passed", false),
               barrierDoc.getBoolean("is_broken", false),
-              barrierDoc.getBoolean("_waited", false),
+              waited,
               barrierDoc.getLong("generation"));
         };
 
