@@ -1,15 +1,20 @@
 package atoma.test.mutex;
 
 import atoma.api.coordination.command.SemaphoreCommand;
-import com.mongodb.client.model.Aggregates;
-import org.bson.BsonNull;
 import org.bson.Document;
 import org.bson.conversions.Bson;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.concurrent.TimeUnit;
 import java.util.stream.Collectors;
+
+import static atoma.storage.mongo.command.AtomaCollectionNamespace.LEASE_NAMESPACE;
+import static com.mongodb.client.model.Accumulators.addToSet;
+import static com.mongodb.client.model.Aggregates.group;
+import static com.mongodb.client.model.Aggregates.lookup;
+import static com.mongodb.client.model.Aggregates.match;
+import static com.mongodb.client.model.Aggregates.unwind;
+import static java.util.Arrays.asList;
 
 public class TmpTest {
   public static void printScript(List<? extends Bson> pipeline) {
@@ -30,89 +35,14 @@ public class TmpTest {
 
     var owner = new Document().append("holder", "1").append("lease", "1");
 
-    var pipeline =
-        List.of(
-            Aggregates.replaceRoot(
-                new Document(
-                    "$cond",
-                    Arrays.asList(
-
-                        // ================= if =================
-                        new Document(
-                            "$and",
-                            Arrays.asList(
-
-                                // ---- read_locks missing OR size == 0 ----
-                                new Document(
-                                    "$or",
-                                    Arrays.asList(
-                                        new Document(
-                                            "$eq",
-                                            Arrays.asList(
-                                                new Document("$type", "$read_locks"), "missing")),
-                                        new Document(
-                                            "$cond",
-                                            Arrays.asList(
-                                                new Document(
-                                                    "$eq",
-                                                    Arrays.asList(
-                                                        new Document("$size", "$read_locks"), 0)),
-                                                true,
-                                                false)))),
-
-                                // ---- write_lock.holder & lease missing or null ----
-                                new Document(
-                                    "$and",
-                                    Arrays.asList(
-                                        new Document(
-                                            "$or",
-                                            Arrays.asList(
-                                                new Document(
-                                                    "$eq",
-                                                    Arrays.asList(
-                                                        new Document("$type", "$write_lock.holder"),
-                                                        "missing")),
-                                                new Document(
-                                                    "$eq",
-                                                    Arrays.asList(
-                                                        "$write_lock.holder", BsonNull.VALUE)))),
-                                        new Document(
-                                            "$or",
-                                            Arrays.asList(
-                                                new Document(
-                                                    "$eq",
-                                                    Arrays.asList(
-                                                        new Document("$type", "$write_lock.lease"),
-                                                        "missing")),
-                                                new Document(
-                                                    "$eq",
-                                                    Arrays.asList(
-                                                        "$write_lock.lease", BsonNull.VALUE)))))))),
-
-                        // ================= then =================
-                        new Document()
-                            .append("write_lock", owner)
-                            .append(
-                                "version",
-                                new Document(
-                                    "$cond",
-                                    Arrays.asList(
-                                        new Document(
-                                            "$or",
-                                            Arrays.asList(
-                                                new Document(
-                                                    "$eq",
-                                                    Arrays.asList(
-                                                        new Document("$type", "$version"),
-                                                        "missing")),
-                                                new Document(
-                                                    "$eq",
-                                                    Arrays.asList("$version", BsonNull.VALUE)))),
-                                        1L,
-                                        new Document("$add", Arrays.asList("$version", 1L))))),
-
-                        // ================= else =================
-                        "$$ROOT"))));
+    final List<Bson> pipeline =
+            asList(
+                    unwind("$participants"),
+                    lookup(LEASE_NAMESPACE, "participants.lease", "_id", "lease_doc"),
+                    match(
+                            new Document(
+                                    "$expr", new Document("$eq", List.of(new Document("$size", "$lease_doc"), 0)))),
+                    group("$_id", addToSet("dead_participant_leases", "$participants.lease")));
 
     printScript(pipeline);
   }
